force-app/main/default/objects/Manual_Invoice__c/Manual_Invoice__c.object-meta.xml
<CustomObject>
    <label>Manual Invoice</label>
    <nameField>
        <displayFormat>MI-{000000}</displayFormat>
        <label>Manual Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>