force-app/main/default/objects/Manual_Invoice__c/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <formula>TEXT( Account_Name__r.Account_Classification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Classification</label>
    <type>Text</type>
</CustomField>