force-app/main/default/objects/Manual_Invoice__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Manual Invoices</relationshipLabel>
    <relationshipName>Manual_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>