force-app/main/default/objects/Manual_Invoice__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( Account_Name__r.RecordType.Name  == &apos;Investors &amp; Intermediary&apos;,
Account_Name__r.ShippingStreet &amp;   BR()  
&amp; Account_Name__r.ShippingCity&amp;  BR() 
&amp; Account_Name__r.ShippingCountry,
 Account_Name__r.Primary_Street__c  &amp; BR() 
&amp; Account_Name__r.Primary_City__c  &amp; BR()  
&amp; TEXT(Account_Name__r.Primary_Country__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>