force-app/main/default/objects/Manual_Invoice__c/fields/Address_ISD__c.field-meta.xml
<CustomField>
    <fullName>Address_ISD__c</fullName>
    <formula>Branch__r.Street__c &amp; BR()
&amp; Branch__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>