force-app/main/default/objects/Manual_Invoice__c/fields/Balance_Amount_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount_InterBranch__c</fullName>
    <formula>ROUND( Amount__c -  Base_Amount_Received_Inter_Branch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount InterBranch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>