force-app/main/default/objects/Manual_Invoice__c/fields/Base_Amount_Received_Inter_Branch__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount_Received_Inter_Branch__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advance Amount Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>