force-app/main/default/objects/Manual_Invoice__c/fields/Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_No__c</fullName>
    <formula>IF( RecordType.Name ==&apos;OPE&apos;,Service_Code_Formula__c+&apos;/&apos;+  Account_Name__r.Branch__r.Branch_Code__c +&apos;/&apos;+Bill_Year__c+&apos;/&apos;+TEXT(Billing_Number__c) , 
					IF( RecordType.Name ==&apos;Other Services&apos;,Service_Code_Formula__c+&apos;/&apos;+  Account_Name__r.Branch__r.Branch_Code__c +&apos;/&apos;+Bill_Year__c+&apos;/&apos;+TEXT(Billing_Number__c) , 
								IF( RecordType.Name ==&apos;ISD&apos;,Service_Code_Formula__c+&apos;/&apos;+  &apos;GG&apos; +&apos;/&apos;+Bill_Year__c+&apos;/&apos;+TEXT(Billing_Number__c) , &apos;&apos;))
		)</formula>
    <label>Bill No</label>
    <type>Text</type>
</CustomField>