force-app/main/default/objects/Manual_Invoice__c/fields/Bill_No_InterBranch1__c.field-meta.xml
<CustomField>
    <fullName>Bill_No_InterBranch1__c</fullName>
    <label>Bill No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>