force-app/main/default/objects/Manual_Invoice__c/fields/Bill_No_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>Bill_No_InterBranch__c</fullName>
    <formula>IF( RecordType.Name ==&apos;Inter-Branch Invoice&apos;, &apos;IB&apos; +&apos;/&apos; + Source_Branch_1__r.Branch_Code__c  +&apos;/&apos;+( Bill_Year__c) +&apos;/&apos;+TEXT(Billing_Number__c) , &apos;null&apos;)</formula>
    <label>Bill No (Interbranch)</label>
    <type>Text</type>
</CustomField>