force-app/main/default/objects/Manual_Invoice__c/fields/Bill_Year__c.field-meta.xml
<CustomField>
    <fullName>Bill_Year__c</fullName>
    <formula>IF( 
	AND(Created_Date__c &gt;= DATE(YEAR(Created_Date__c),04,01), 
	Created_Date__c &lt;= DATE(YEAR(Created_Date__c)+1 ,03,31)),  
	RIGHT(Text(YEAR( Created_Date__c)), 2) + RIGHT(Text(YEAR( Created_Date__c)+1), 2) , RIGHT(Text(YEAR( Created_Date__c)-1), 2) + RIGHT(Text(YEAR( Created_Date__c)), 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Year</label>
    <type>Text</type>
</CustomField>