force-app/main/default/objects/Manual_Invoice__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Manual Invoices (Branch)</relationshipLabel>
    <relationshipName>Manual_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>