force-app/main/default/objects/Manual_Invoice__c/fields/Branch_GSTIN_ISD__c.field-meta.xml
<CustomField>
    <fullName>Branch_GSTIN_ISD__c</fullName>
    <formula>Branch__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch GSTIN</label>
    <type>Text</type>
</CustomField>