force-app/main/default/objects/Manual_Invoice__c/fields/Branch_Name_Ref__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name_Ref__c</fullName>
    <formula>&quot;Gurgaon&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Name</label>
    <type>Text</type>
</CustomField>