force-app/main/default/objects/Manual_Invoice__c/fields/Branch_State_Code_ISD__c.field-meta.xml
<CustomField>
    <fullName>Branch_State_Code_ISD__c</fullName>
    <formula>Value(Branch__r.State_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch State Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>