force-app/main/default/objects/Manual_Invoice__c/fields/Branch_State_ISD__c.field-meta.xml
<CustomField>
    <fullName>Branch_State_ISD__c</fullName>
    <formula>TEXT(Branch__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch State</label>
    <type>Text</type>
</CustomField>