force-app/main/default/objects/Manual_Invoice__c/fields/CGST_Amount_on_Invoice_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_on_Invoice_InterBranch__c</fullName>
    <formula>ROUND(Amount__c *  CGST_Rate_for_Invoice_Amount_InterBranch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount on Invoice InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>