force-app/main/default/objects/Manual_Invoice__c/fields/CGST_Amount_Received_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount_Received_InterBranch__c</fullName>
    <formula>ROUND(Base_Amount_Received_Inter_Branch__c *  CGST_Rate_for_Amount_Recd_InterBranch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Amount Received InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>