force-app/main/default/objects/Manual_Invoice__c/fields/CGST_Balance_Amount_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>CGST_Balance_Amount_InterBranch__c</fullName>
    <formula>ROUND(CGST_Amount_on_Invoice_InterBranch__c -  CGST_Amount_Received_InterBranch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Balance Amount InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>