force-app/main/default/objects/Manual_Invoice__c/fields/CGST_Rate_for_Invoice_Amount_ISD__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate_for_Invoice_Amount_ISD__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST Rate for Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>