force-app/main/default/objects/Manual_Invoice__c/fields/Contact_Designation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Designation__c</fullName>
    <formula>Contact_Name__r.Designation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Designation</label>
    <type>Text</type>
</CustomField>