force-app/main/default/objects/Manual_Invoice__c/fields/Customer_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Customer_GSTIN__c</fullName>
    <formula>Account_Name__r.Primary_GST_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer GSTIN</label>
    <type>Text</type>
</CustomField>