force-app/main/default/objects/Manual_Invoice__c/fields/Customer_PAN__c.field-meta.xml
<CustomField>
    <fullName>Customer_PAN__c</fullName>
    <formula>Account_Name__r.PAN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer PAN</label>
    <type>Text</type>
</CustomField>