force-app/main/default/objects/Manual_Invoice__c/fields/Customer_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_State__c</fullName>
    <formula>IF( Account_Name__r.RecordType.Name == &apos;Investors &amp; Intermediary&apos;, Account_Name__r.ShippingState ,TEXT(Account_Name__r.Primary_State__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer State</label>
    <type>Text</type>
</CustomField>