force-app/main/default/objects/Manual_Invoice__c/fields/Customer_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_State_Code__c</fullName>
    <formula>Account_Name__r.State_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer State Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>