force-app/main/default/objects/Manual_Invoice__c/fields/Description_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Service__c</fullName>
    <label>Description of Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>