force-app/main/default/objects/Manual_Invoice__c/fields/Description_of_Service_OPE__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Service_OPE__c</fullName>
    <formula>&quot;Credit Rating Agency Services&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description of Service</label>
    <type>Text</type>
</CustomField>