force-app/main/default/objects/Manual_Invoice__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>