force-app/main/default/objects/Manual_Invoice__c/fields/IGST_Amount_on_Invoice_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_on_Invoice_InterBranch__c</fullName>
    <formula>ROUND( Amount__c *  IGST_Rate_for_Invoice_Amount_InterBranch__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount on Invoice InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>