force-app/main/default/objects/Manual_Invoice__c/fields/IGST_Amount_on_Invoice_ISD__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_on_Invoice_ISD__c</fullName>
    <formula>ROUND(  Invoice_Taxable_Amount_ISD__c * IGST_Rate_for_Invoice_Amount_ISD__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount on Invoice ISD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>