force-app/main/default/objects/Manual_Invoice__c/fields/IGST_Amount_Received_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount_Received_InterBranch__c</fullName>
    <formula>ROUND( Base_Amount_Received_Inter_Branch__c *  IGST_Rate_for_Amount_ReceivedInterBranch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount Received InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>