force-app/main/default/objects/Manual_Invoice__c/fields/IGST_Balance_Amount_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>IGST_Balance_Amount_InterBranch__c</fullName>
    <formula>ROUND( IGST_Amount_on_Invoice_InterBranch__c -  IGST_Amount_Received_InterBranch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Balance Amount InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>