force-app/main/default/objects/Manual_Invoice__c/fields/IGST_Rate_for_Amount_ReceivedInterBranch__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate_for_Amount_ReceivedInterBranch__c</fullName>
    <formula>if(Source_Branch_1__r.State_Code__c &lt;&gt;  Destination_Branch__r.State_Code__c,0.18,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Rate for Amount ReceivedInterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>