force-app/main/default/objects/Manual_Invoice__c/fields/IGST_Rate_for_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Rate_for_Invoice_Amount__c</fullName>
    <formula>IF(Account_Name__r.RecordType.Name ==&apos;Issuer&apos;,
IF(TEXT(Account_Name__r.Primary_State__c) &lt;&gt; TEXT(Account_Name__r.Branch__r.State__c),
0.18,
0),
IF(Account_Name__r.RecordType.Name ==&apos;Investors &amp; Intermediary&apos;,
IF(Account_Name__r.ShippingState &lt;&gt; TEXT(Account_Name__r.Branch__r.State__c),
0.18,
0),
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Rate for Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>