force-app/main/default/objects/Manual_Invoice__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <label>Instrument</label>
    <length>100</length>
    <type>Text</type>
</CustomField>