force-app/main/default/objects/Manual_Invoice__c/fields/InterBranch_ID__c.field-meta.xml
<CustomField>
    <fullName>InterBranch_ID__c</fullName>
    <label>InterBranch ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>