force-app/main/default/objects/Manual_Invoice__c/fields/Invoice_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Created_Date__c</fullName>
    <label>Invoice Created Date</label>
    <type>Date</type>
</CustomField>