force-app/main/default/objects/Manual_Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>OP Tax Invoice</fullName>
            </value>
            <value>
                <fullName>QR and IRN - Generated</fullName>
            </value>
            <value>
                <fullName>QR and IRN - Failed</fullName>
            </value>
            <value>
                <fullName>Initiate OP Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Initiate OT Tax Invoice</fullName>
            </value>
            <value>
                <fullName>OT Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Initiate IB Tax Invoice</fullName>
            </value>
            <value>
                <fullName>IB Tax Invoice</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <isActive>false</isActive>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Porforma Invoice</fullName>
                <isActive>false</isActive>
                <label>Porforma Invoice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>