force-app/main/default/objects/Manual_Invoice__c/fields/Invoice_Taxable_Amount_ISD__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Taxable_Amount_ISD__c</fullName>
    <label>Invoice Taxable Amount ISD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>