force-app/main/default/objects/Manual_Invoice__c/fields/Location_of_Destination__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Destination__c</fullName>
    <formula>Account_Name__r.Branch__r.City__c</formula>
    <label>Location of Destination</label>
    <type>Text</type>
</CustomField>