force-app/main/default/objects/Manual_Invoice__c/fields/Location_of_Supplier_ISD__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Supplier_ISD__c</fullName>
    <formula>IF( Branch__r.Name == &apos;Gurgaon&apos;,  Branch__r.City__c ,&apos;Select Branch&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location of Supplier</label>
    <type>Text</type>
</CustomField>