force-app/main/default/objects/Manual_Invoice__c/fields/Ok__c.field-meta.xml
<CustomField>
    <fullName>Ok__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ok</label>
    <type>Checkbox</type>
</CustomField>