force-app/main/default/objects/Manual_Invoice__c/fields/Particulars__c.field-meta.xml
<CustomField>
    <fullName>Particulars__c</fullName>
    <label>Particulars</label>
    <type>TextArea</type>
</CustomField>