force-app/main/default/objects/Manual_Invoice__c/fields/Particulars_OPE__c.field-meta.xml
<CustomField>
    <fullName>Particulars_OPE__c</fullName>
    <formula>&quot;Out of pocket expenses incurred in connection with the rating exercise carried out by our agency for your company&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Particulars</label>
    <type>Text</type>
</CustomField>