force-app/main/default/objects/Manual_Invoice__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <formula>IF(Account_Name__r.RecordType.Name ==&apos;Investors &amp; Intermediary&apos;,  Account_Name__r.ShippingPostalCode ,  Account_Name__r.Primary_Zip_Postal_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pincode</label>
    <type>Text</type>
</CustomField>