force-app/main/default/objects/Manual_Invoice__c/fields/Rate_1__c.field-meta.xml
<CustomField>
    <fullName>Rate_1__c</fullName>
    <formula>IF( Destination_Branch__r.State_Code__c != Source_Branch_1__r.State_Code__c, 0.18 , 0)</formula>
    <label>Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>