force-app/main/default/objects/Manual_Invoice__c/fields/Revised_Agreed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revised_Agreed_Amount__c</fullName>
    <label>Revised Agreed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>