force-app/main/default/objects/Manual_Invoice__c/fields/SAC_HSN__c.field-meta.xml
<CustomField>
    <fullName>SAC_HSN__c</fullName>
    <label>SAC/HSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>