force-app/main/default/objects/Manual_Invoice__c/fields/SAC_HSN_ISD__c.field-meta.xml
<CustomField>
    <fullName>SAC_HSN_ISD__c</fullName>
    <formula>&quot;998591&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAC/HSN</label>
    <type>Text</type>
</CustomField>