force-app/main/default/objects/Manual_Invoice__c/fields/Service_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Service_Code_Formula__c</fullName>
    <formula>if(RecordType.Name == &apos;OPE&apos;,&apos;OP&apos;,if(RecordType.Name == &apos;ISD&apos;,&apos;ISD&apos;,&apos;OT&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Code</label>
    <type>Text</type>
</CustomField>