force-app/main/default/objects/Manual_Invoice__c/fields/SGST__c.field-meta.xml
<CustomField>
    <fullName>SGST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SGST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>