force-app/main/default/objects/Manual_Invoice__c/fields/SGST_Amount_on_Invoice_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount_on_Invoice_InterBranch__c</fullName>
    <formula>ROUND(Amount__c * SGST_UTGST_Rate_on_invoice_InterBranch__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Amount on Invoice InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>