force-app/main/default/objects/Manual_Invoice__c/fields/SGST_UTGST__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST__c</fullName>
    <formula>IF( Destination_Branch__r.State_Code__c = Source_Branch_1__r.State_Code__c , (( Amount__c /100)*9),0)</formula>
    <label>SGST/UTGST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>