force-app/main/default/objects/Manual_Invoice__c/fields/SGST_UTGST_Rate_for_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Rate_for_Invoice_Amount__c</fullName>
    <formula>IF(Account_Name__r.RecordType.Name ==&apos;Issuer&apos;,
IF(TEXT(Account_Name__r.Primary_State__c) == TEXT(Account_Name__r.Branch__r.State__c),
0.09,
0),
IF(Account_Name__r.RecordType.Name ==&apos;Investors &amp; Intermediary&apos;,
IF(Account_Name__r.ShippingState == TEXT(Account_Name__r.Branch__r.State__c),
0.09,
0),
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST/UTGST Rate for Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>