force-app/main/default/objects/Manual_Invoice__c/fields/SGST_UTGST_Rate_on_invoice_InterBranch__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Rate_on_invoice_InterBranch__c</fullName>
    <formula>if( Source_Branch_1__r.State_Code__c == Destination_Branch__r.State_Code__c,0.09,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST/UTGST Rate on invoice InterBranch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>