force-app/main/default/objects/Manual_Invoice__c/fields/Source_Branch_1__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Manual Invoices (Source Branch)</relationshipLabel>
    <relationshipName>Manual_Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>